# uicket-web

./: .gitignore  README.md  pyproject.toml  requirements.txt  translation.json
src/tools/: __init__.py  database.py  search.py  translate.py
src/uicket/: __init__.py  __main__.py  api.py  main.py
src/uicket/api/: api.py
src/uicket/app/: .gitignore  __init__.py  api.py  app.py
src/uicket/app/static/: load_favorites.js  release.js  search.js  styles.css
src/uicket/app/templates/: base.html  error.html  favorites.html  index.html  release.html
src/uicket/tools/: __init__.py  database.py  indexgen.py  search.py  spider.py
